[package]
name = "stcp"
version = "0.0.0"
authors = ["Skiy Chan <skiychan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A tcp server"
keywords = ["stcp", "tcp", "rust-tcp"]
categories = []
readme = "README.md"
license = "MIT"
repository = "https://github.com/skiy/stcp.git"

[dependencies]
